--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .venv/
 .env
-migrations/
+migrations
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
